--- a/Style.css
+++ b/Style.css
@@ -42,3 +42,12 @@ a{
     cursor: pointer;
     background-color: white;
 }
+
+.image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    filter: grayscale(100);
+    border-radius: 3pt;
+}
