--- a/Style.css
+++ b/Style.css
@@ -47,7 +47,9 @@ a{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 60%;
+    max-height: 400px;
     filter: grayscale(100);
     border-radius: 3pt;
+    object-fit: cover;
 }
